--- a/wiki/AllAboutSiteBridge.wiki
+++ b/wiki/AllAboutSiteBridge.wiki
@@ -1,3 +1,5 @@
+#summary All about SiteBridge (both server and client).
+
 = Introduction =
 
 Welcome to SiteBridge! SiteBridge allows you to bridge a Google App Engine (GAE) site to a target site. With problem transformers written (default/basic/generic provided) the GAE bridge site looks and behaves identically to the target site. The target site is usually inaccessible directly from the rest of the world (e.g. behind firewall). This allows one to temporarily expose it so testing and/or showcasing it are possible. 
