--- a/wiki/InstallationAndUsage.wiki
+++ b/wiki/InstallationAndUsage.wiki
@@ -1,5 +1,7 @@
 #summary Installation instructions and how to run things
 
+* If you haven't read [http://code.google.com/p/sitebridgeserver/wiki/AllAboutSiteBridge Introduction] to understand SiteBridge, it's strongly recommended to do so first.
+
 = Overall =
 
 As in the Introduction, you need to two components of SiteBridge to make the magic happen: SiteBridgeServer and SiteBridgeClient.
