Edited wiki page InstallationAndUsage through web user interface.

--- a/wiki/InstallationAndUsage.wiki
+++ b/wiki/InstallationAndUsage.wiki
@@ -8,4 +8,49 @@ As in the Introduction, you need to two components of SiteBridge to make the mag
 
 = Install SiteBridgeServer =
 
-This is perhaps the easiest part but it a bit requires some involvement. First you need to download Google App Engine *Java SDK*. Sorry GAE doesn't have an option of building ready-to-deploy WAR and a tool that you can do the deployment without having to mess around with the SDK. So go an download/install that. Second you need to 
+== Requirements ==
+This is perhaps the easiest part but it a bit requires some involvement. First you need to download Google App Engine *Java SDK*. Sorry GAE doesn't have an option of building ready-to-deploy WAR and a tool that you can do the deployment without having to mess around with the SDK. So go an download/install that. Second you need to have Groovy 1.7.5+. Note that this is not strictly needed because you can go with the pre-built already-ready-to-deploy WAR file in the download section. If you choose to build it yourself, go install Groovy system then jump to Build SiteBridgeServer section. If you go with the pre-built WAR file, just jump to Deploy SiteBridgeServer section directly.
+
+== Build SiteBridgeServer ==
+
+Once you get all the source files of SiteBridgeServer, all you need to do is to go in there and execute the following command to compile class.
+
+{{{
+groovy build.groovy
+}}}
+
+Assuming everything goes well, this command will generate a bunch of classes in war/WEB-INF/classes. This is it for building.
+
+== Deploy SiteBridgeServer ==
+
+Either you build the code yourself or you use the almost-ready-to-deploy war file, you will need to deploy the app to *your own* GAE site. If you haven't created a new GAE application under your account, do so now. See GAE's document on how to create one - very simple.
+
+Once the GAE site/app is created, you are ready to deploy. Before you do just that, edit the following: WEB-INF/appengine-web.xml such that the name in <application> tag matches with your GAE site/app. *You need to do this first otherwise you'll have a hard time deploying it.* The deployment must go to your very own GAE site/app.
+
+Once editing of WEB-INF/appengine-web.xml is done, execute GAE's command to deploy it. Usually this is the command to do so.
+
+{{{
+appcfg.sh update war
+}}}
+
+Check out any error. You shouldn't be getting one. Once that's you are ready to smoke test the deployment.
+
+== Smoketest SiteBridgeServer ==
+
+Once you are through with the deployment and everything, you can test if the system is properly install and ready to run by opening the browser and type in the following address.
+
+http://<your sitebridge server url>/bridgeconsole/status
+
+e.g. 
+
+http://myfoobarsitebridge.appspot.com/bridgeconsole/status
+
+Note that your GAE site can be https as well. Modify the address above to match with what you actually have.
+
+Once you enter the address, you should be getting a page saying:
+
+{{{
+system is up 
+}}}
+
+If so, you are done with server side.
