Edited wiki page InstallationAndUsage through web user interface.

--- a/wiki/InstallationAndUsage.wiki
+++ b/wiki/InstallationAndUsage.wiki
@@ -11,9 +11,9 @@ As in the Introduction, you need to two components of !SiteBridge to make the ma
 = Install !SiteBridgeServer =
 
 == Requirements ==
-This is perhaps the easiest part but it a bit requires some involvement. First you need to download Google App Engine *Java SDK*. Sorry GAE doesn't have an option of building ready-to-deploy WAR and a tool that you can do the deployment without having to mess around with the SDK. So go an download/install that. Second you need to have Groovy 1.7.5+. Note that this is not strictly needed because you can go with the pre-built already-ready-to-deploy WAR file in the download section. If you choose to build it yourself, go install Groovy system then jump to Build !SiteBridgeServer section. If you go with the pre-built WAR file, just jump to Deploy !SiteBridgeServer section directly.
+This is perhaps the easiest part but it a bit requires some involvement. First you need to download Google App Engine *Java SDK*. Sorry GAE doesn't have an option of building ready-to-deploy WAR and a tool that you can do the deployment without having to mess around with the SDK. So go an download/install that. Second you need to have Groovy 1.7.5+. Note that this is not strictly needed because you can go with the pre-built already-ready-to-deploy WAR file in the download section. If you choose to build it yourself, go install Groovy system then jump to Build section. If you go with the pre-built WAR file, just jump to Deploy section directly.
 
-== Build !SiteBridgeServer ==
+== Build ==
 
 Once you get all the source files of !SiteBridgeServer, all you need to do is to go in there and execute the following command to compile class.
 
@@ -23,7 +23,7 @@ groovy build.groovy
 
 Assuming everything goes well, this command will generate a bunch of classes in war/WEB-INF/classes. This is it for building.
 
-== Deploy !SiteBridgeServer ==
+== Deploy ==
 
 Either you build the code yourself or you use the almost-ready-to-deploy war file, you will need to deploy the app to *your own* GAE site. If you haven't created a new GAE application under your account, do so now. See GAE's document on how to create one - very simple.
 
@@ -37,7 +37,7 @@ appcfg.sh update war
 
 Check out any error. You shouldn't be getting one. Once that's you are ready to smoke test the deployment.
 
-== Smoketest !SiteBridgeServer ==
+== Smoketest ==
 
 Once you are through with the deployment and everything, you can test if the system is properly install and ready to run by opening the browser and type in the following address.
 
@@ -58,10 +58,10 @@ system is up
 
 If so, you are done with server side.
 
-= Installing SiteBridgeClient =
+= Installing !SiteBridgeClient =
 
 == Requirements ==
 
-If you just want to use SiteBridgeClient, all you need is a Java Runtime Environment 6 (though older versions like 5 is fine, it's strongly recommend to go with the latest version you can afford). All you need to do is to download the pre-build [http://code.google.com/p/sitebridgeclient/downloads/list SiteBridgeClient jar] file. If you however want to build the client code, you will need Java JDK 6+ and Maven 2. Jump directly to Start Bridging section if you already downloaded the client jar. Otherwise, continue to Build SiteBridgeClient section.
+If you just want to use !SiteBridgeClient, all you need is a Java Runtime Environment 6 (though older versions like 5 is fine, it's strongly recommend to go with the latest version you can afford). All you need to do is to download the pre-build [http://code.google.com/p/sitebridgeclient/downloads/list !SiteBridgeClient jar] file. If you however want to build the client code, you will need Java JDK 6+ and Maven 2. Jump directly to Start Bridging section if you already downloaded the client jar. Otherwise, continue to Build SiteBridgeClient section.
 
-== Build SiteBridgeClient ==
+== Build ==
