Edited wiki page InstallationAndUsage through web user interface.

--- a/wiki/InstallationAndUsage.wiki
+++ b/wiki/InstallationAndUsage.wiki
@@ -1,4 +1,4 @@
-#summary Installation instructions for both SiteBridgeServer and SiteBridgeClient
+#summary Build and installation instructions for both SiteBridgeServer and SiteBridgeClient
 
 <wiki:toc max_depth="2" />
 
